css/style.css
:root {
    --color-white: rgb(250, 250, 250);
    --color-black: #454545;
    --grey: #ccc;
    --color-primary: #979e93;
    /* This color should be eye-catching but not harsh. It can be liberally applied to your layout as its main identity.  */
    --light-shades: #f7f7f5;
    /* Use this color as the background for your dark-on-light designs, or the text color of an inverted design.  */
    --light-accent: #9b9884;
    /* Accent colors can be used to bring attention to design elements by contrasting with the rest of the palette.  */
    --dark-accent: #8f8182;
    /* Another accent color to consider. Not all colors have to be used - sometimes a simple color scheme works best.  */
    --dark-shades: #2b3245;
    /*  Use as the text color for dark-on-light designs, or as the background for inverted designs.
     */
    --text-shadow: 0 0 1px #fff;
    --success: #63aa64;
    --warning: #e09a2c;
    --error: #f44336;
}
* {
    box-sizing: border-box;
}

html, body {
    padding: 0;
    margin: 0;
}
body {
    width: 100vw;
    height: 100vh;
    line-height: 1.6;
    font-size: 1.2rem;
    background-color: var(--light-shades);
    color: var(--dark-shades);
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
    text-shadow: var(--text-shadow);
    /* animation: switchColor 0.6s linear;
    animation-fill-mode: backwards; */
}

nav {
    top: 0;
    width: 100%;
    padding: 0.2em 1em;
    background-color: inherit;
    position: sticky;
    justify-content: space-between;
    display: flex;
    align-items: center;
}

nav #site-name a {

    left: 0;
    color: var(--color-primary);
    width: 33%;
    float: left;
    font-size: 2.5rem;
    font-weight: 600;
    padding: 0 1rem 0 0;
}

nav #site-name a:hover {
    color: var(--dark-shades);
    text-decoration: none;
}

nav ul {
    right: 0;
    width: 66%;
    float:right;
    display: flex;
    list-style: none;
}

nav li {
    font-size: 0.85rem;
    margin: 0 1rem;
}

nav a {
    font-weight: 600;
    color: var(--color-primary);
    text-decoration: none;
    opacity: 0.7;
}

nav a:hover {
    color: var(--color-primary);
}

nav a:active {
    color: var(--color-primary);
}

a {
    font-weight: bold;
    text-decoration: none;
    color: var(--color-primary);
}

a:hover {
    color: var(--dark-shades);
    transition: ease-in-out 0.2s;
}

p {
    margin-bottom: 1.2rem;
    text-align: justify;
}

h1 {
    font-size: 3rem;
    margin-bottom: 0rem;
    max-width: 9em;
}

h2 {
    padding: 0.25em;
    font-size: 1.5rem;
    margin-top: 0;
}

button {
    display: inline-block;
    padding: 0.5rem 1rem;
    margin: 2rem auto;
    background-color: var(--color-primary);
    border-radius: 50px;
    text-decoration: none;
    color: var(--light-shades);
    font-weight: 500;
    font-size: 1.2rem;
    transition: ease-in-out 0.2s;
}

button:hover {
    background-color: var(--color-primary);
    color: #fff;
    transition: ease-in-out 0.2s;
}

img {
    border-radius: 5px;
}

.settings {
    height: 100%;
}

.theme-toggle {
    vertical-align: middle;
    display: flex;
    cursor: pointer;
    height: 30px;
    width: 50px;
    border: 3px solid var(--color-black);
    margin-left: auto;
    margin-bottom: 0.5em;
    position: relative;
    background-color: var(--color-primary);
    border-radius: 1rem;
}


.theme-toggle::after{
    content: '';
    font-size: 0.9rem;
    position: absolute;
    height: 28px;
    width: 28px;
    top: -1px;
    left: 20px;
    background-color: var(--color-black);
    border-radius: 50%;
    border: none;
    transition-duration: 0.4s;
}

.theme-toggle::before {
    content: '☀️';
    z-index: 2;
    position: absolute;
    font-size: 0.8rem;
    top: 0.35rem;
    left: 1.65rem;
    transition-duration: 0.4s;
}

.dark {
    background-color: var(--color-black);
    color: var(--light-shades);
    animation: switchColor 0.6s linear;
    animation-fill-mode: forwards;
}

.dark .theme-toggle {
    border-color: var(--light-text);
    background-color: var(--color-black);
}

.dark .theme-toggle::after {
    content: '';
    left: -1px;
    background-color: var(--light-shades);
    transition-duration: 0.4s;
}

.dark .theme-toggle::before {
    content: '🌙';
    font-size: 0.8rem;
    left: 0.2rem;
    transition-duration: 0.4s;
}

@keyframes switchColor {
    0% {
        background-color: var(--light-shades);
    }
    50% {
        background-color: var(--color-primary);
    }
    100% {
        background-color: var(--color-black);
    }
}

@media (prefers-color-scheme: dark) {
    body {
        background-color: var(--dark-shades);
        color: var(--light-shades);
    }
    .theme-toggle {
        background-color: var(--color-primary);
    }
    .theme-toggle::after {
        content: '🌙';
        left: 2px;
        background-color: var(--light-shades);
    }
}

.wrapper {
    margin: 5% auto;
    max-width: 73%;
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 1rem;
}

section {
    margin: 128px 0;
    display: grid;
    place-items: center;
}

iframe[seamless] {
    width: 100%;
    border: none;
}


/*================================================== 

SHARED CLASSES 

====================================================*/

.title {
    text-align: center;
    font-size: 3rem;
    font-weight: 500;
    font-family: 'Gill Sans', 'Gill Sans MT', 
}

.home-link a {
    font-size: 0.8rem;
    color: var(--color-primary);
}

.home-link:hover a {
    color: var(--color-black);
    text-decoration: none;
}

.home-link a:active {
    color: var(--color-black);
    text-decoration: none;
}

.home-link:visited a {
    color: var(--color-black);
}



.callout {
    background-color: var(--light-accent);
    color: var(--light-shades);
    padding: 1rem;
    border-radius: 5px;
    margin-bottom: 1rem;
}

.gif {
    max-width: 400px;
}

.lesson {
    margin-top: 2rem;
}

.lesson details {
    padding: 1rem;
    border-radius: 50px;
    cursor: pointer;
    display: flex;
    place-items: center;
}

.lesson details:open {
    border-radius: 15px;
}

.lesson details::marker {
    color: var(--light-shades);
}

.lesson > * > .description {
    width: 80%;
    margin-top: 2rem;
    font-size: 0.9rem;
    font-style: oblique;
}

.game-stats {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 2rem;
}

.game-stats #time {
    font-size: 1.5rem;
    font-weight: 500;
}

.flex-column-half {
    width: 50%;
    display: flex;
    flex-direction: column;
}

/*====================================================

UTILITY CLASSES

=====================================================*/
.center {
    display: grid;
    place-items: center;
}

.div--left {
    width: 45%;
    float: left;
    margin-right: 1rem;
}

.div--right {
    width: 45%;
    float: right;
}

